RESOLVED FIXED245788
FetchEvent should not start its navigation preload response load if the preload was already used
https://bugs.webkit.org/show_bug.cgi?id=245788
Summary FetchEvent should not start its navigation preload response load if the prelo...
youenn fablet
Reported 2022-09-28 09:39:58 PDT
Attachments
youenn fablet
Comment 1 2022-09-28 11:45:31 PDT
EWS
Comment 2 2022-09-29 02:42:22 PDT
Committed 254992@main (757903c6fe5a): <https://commits.webkit.org/254992@main> Reviewed commits have been landed. Closing PR #4798 and removing active labels.
youenn fablet
Comment 3 2022-10-03 01:25:39 PDT
*** Bug 245866 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.