Cherry-pick 757903c6fe5a. rdar://problem/98144044

FetchEvent should not start its navigation preload response load if the preload was already used
    https://bugs.webkit.org/show_bug.cgi?id=245788
    rdar://98144044

    Reviewed by Alex Christensen.

    Creating the navigation preload promise was scheduling a load which is hitting the network if the preload is no longer in network process.
    This case happens if the navigation preload promise is actually used in respondWith.

    To circumvent this issue, we do not trigger the load if the preload is used in respondWith.

    Add logs to capture the fact that a load is not getting its expected preload.

    Drive-by fixes to actually use the current preload request and not the loader original request.
    This might change in case of redirections.

    Covered by newly added test which mirrors what we were testing for non-exposed navigation preloads.

    * LayoutTests/http/wpt/service-workers/fetch-service-worker-navigation-preload.https-expected.txt: Added.
    * LayoutTests/http/wpt/service-workers/fetch-service-worker-navigation-preload.https.html: Added.
    * LayoutTests/http/wpt/service-workers/fetch-service-worker-preload-worker.js:
    (event.event.request.url.includes):
    * LayoutTests/http/wpt/service-workers/resources/fetch-service-worker-preload-script.py:
    (main):
    * Source/WebCore/Modules/fetch/FetchResponse.cpp:
    (WebCore::FetchResponse::markAsUsedForPreload):
    (WebCore::FetchResponse::markAsDisturbed): Deleted.
    * Source/WebCore/Modules/fetch/FetchResponse.h:
    * Source/WebCore/workers/service/FetchEvent.cpp:
    (WebCore::FetchEvent::navigationPreloadIsReady):
    * Source/WebCore/workers/service/context/ServiceWorkerFetch.cpp:
    (WebCore::ServiceWorkerFetch::processResponse):
    * Source/WebKit/NetworkProcess/ServiceWorker/ServiceWorkerFetchTask.cpp:
    (WebKit::ServiceWorkerFetchTask::fromNavigationPreloader):
    (WebKit::ServiceWorkerFetchTask::ServiceWorkerFetchTask):
    (WebKit::ServiceWorkerFetchTask::loadBodyFromPreloader):

    Canonical link: https://commits.webkit.org/254992@main

Canonical link: https://commits.webkit.org/252432.474@safari-7614.2.9.0-branch