LayoutTests/http/wpt/service-workers/resources/fetch-service-worker-preload-script.py
@@ -12,6 +12,7 @@ def main(request, response):
         request.server.stash.take(testId)
         request.server.stash.put(testId, request.GET[b'value'])
         response.headers.set(b"Content-Type", b"text/ascii")
+        request.server.stash.put(countId, 0)
         return b"updated to " + request.GET[b'value']
 
     if request.GET.first(b"count", False):
